# ARX5

./: .gitignore
arx5_control/: CMakeLists.txt
arx5_control/include/hardware/: A8120.h  can.h  dbus.h  math_ops.h
arx5_control/include/libcan/: CANFrameParser.h
arx5_control/scripts/: actuator_interface.py  arx5_monitor.py  arx_server.py  arx_server_aruco.py
arx5_control/src/: arx5_control.cpp
arx5_control/src/hardware/: A8120.cpp  dbus.cpp  math_ops.cpp
arx5_control/src/libcan/: CANAdapter.cpp  CANFrameParser.cpp
arx5_control/src/ros_interface/: ros_interface.cpp
arx5_control/srv/: MarkerDetResult.srv  arx5_grasp.srv
demo/: arx5_cube_servo_pub.py  arx5_cube_servo_sub.py  arx5_cube_vision.py  arx5_moveit_keyboard.py  hsv_threshold.py  tutorial_demo.ipynb  tutorial_param.ipynb  tutorial_vision.ipynb
ros/descriptions/arx5_description/: CMakeLists.txt  package.xml
ros/descriptions/arx5_description/meshes/: base_link.STL  gripper_link1.STL  gripper_link2.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL
ros/descriptions/arx5_description/urdf/: arx5_description.urdf
ros/descriptions/arx5_description_pick_place/: package.xml
ros/descriptions/arx5_description_pick_place/config/: joint_names_ARX-5s-V2.0.SLDASM.yaml
ros/descriptions/arx5_description_pick_place/launch/: display.launch  gazebo.launch
ros/descriptions/arx5_description_pick_place/meshes/: Gripper.STL  Gripper_down.STL  base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL
ros/descriptions/arx5_description_pick_place/rviz/: urdf.rviz
ros/descriptions/arx5_description_pick_place/urdf/: arx5_description.urdf
ros/src/arx5/: arx5_description
ros/src/arx5/arx5_control/: CMakeLists.txt  package.xml
ros/src/arx5/arx5_control/include/libcan/: CANAdapter.h  SocketCAN.h
ros/src/arx5/arx5_control/include/ros_interface/: ros_interface.h
ros/src/arx5/arx5_control/scripts/: arx_server_aruco.py  arx_server_det.py  arx_server_marker.py  arx_test.py  test_single_actuator.py
ros/src/arx5/arx5_control/src/hardware/: can.cpp
ros/src/arx5/arx5_control/src/libcan/: SocketCAN.cpp
ros/src/arx5/arx5_control/src/ros_interface/: ros_interface.cpp
ros/src/arx5/arx5_control/srv/: MarkerDetResult.srv  det.srv
ros/src/arx5/arx5_moveit/: .setup_assistant  CMakeLists.txt  package.xml  setup.py
ros/src/arx5/arx5_moveit/config/: arx5_description.srdf  fake_controllers.yaml  gazebo_arx5_description.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
ros/src/arx5/arx5_moveit/launch/: arx5_moveit.launch  arx5_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml
ros/src/arx5/arx5_moveit/pkgs/arx5_control/: __init__.py
ros/src/arx5/arx5_moveit/pkgs/arx5_moveit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ros/src/arx5/arx5_moveit/scripts/: arx5_calibration.py  arx5_joystick.py  arx5_keyboard.py  arx5_moveit_follow.py  arx5_moveit_tag_follow.py  calibration.py  data_process.py  follow_joint_trajectory_server.py  frequency_detect.py  pid.py  test.py
ros/src/arx5/arx5_msgs/: CMakeLists.txt  package.xml
ros/src/arx5/arx5_msgs/msg/: JointCommand.msg  JointFeedback.msg  TeleopCommand.msg
ros/src/arx5/arx5_vision/: CMakeLists.txt  package.xml  setup.py
ros/src/arx5/arx5_vision/config/: arx5_calib_eye_on_hand.yaml  tags.yaml
ros/src/arx5/arx5_vision/launch/: calibration.launch  publish.launch  sensor.launch  vision.launch
ros/src/arx5/arx5_vision/pkgs/arx5_vision/: vision.py
ros/src/arx5/arx5_vision/pkgs/arx5_vision.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ros/src/arx5/arx5_vision/scripts/: Best_Contour.py  ImageDiff.py  arx5_vision_.py  publish.py  test0.py  vision_param.json
ros/src/arx5/arx5_vision/tag/: readme.text
ros/src/easy_handeye/easy_handeye/launch/: calibrate.launch
ros/src/easy_handeye/easy_handeye/scripts/: calibrate.py  publish.py
ros/src/easy_handeye/easy_handeye/src/easy_handeye.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sdk/: README.md
shs/: config.sh  config_all.sh  config_real.sh  config_ros.sh  config_sdk.sh  config_sim.sh  install_packages.sh  isaac_sim.sh  python_kill.sh  run_keyboard_control.sh  run_pick_place.sh  run_real.sh  run_real_demo.sh  run_sim.sh  setup_all.sh  setup_ros.sh  setup_sim.sh  update.sh
