<?xml version="1.0"?>
<package format="2">
  <name>arx5_control</name>
  <version>0.0.0</version>
  <description>The arx5_control package</description>
  <maintainer email="farewellfryc@gmail.com">0nhc</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>arx5_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>arx5_msgs</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>arx5_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
