<?xml version="1.0"?>
<package format="2">
  <name>arx5_vision</name>
  <version>0.0.0</version>
  <description>The arx5_vision package</description>

  <maintainer email="ericc_feng@qq.com">Eric Feng</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <url type="website">https://air.tsinghua.edu.cn/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>arx5_msgs</build_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>apriltag_ros</exec_depend>
  <exec_depend>arx5_msgs</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>

  <export>

  </export>
</package>
